--- a/www/css/select.session.css
+++ b/www/css/select.session.css
@@ -111,15 +111,12 @@ li.select-session-row.selected {
     text-align: right;
 }
 
-.select-session-available-sessions-container {
-    width:100%;
-    height: 100%;
-    overflow: hidden;
+.select-session-available-sessions-wrapper {
     background: repeating-linear-gradient(
-      45deg,
-      #E8E8E8,
-      #E8E8E8 10px,
-      #f7f4f4 10px,
-      #f7f4f4 20px
-    );
+            45deg,
+            #E8E8E8,
+            #E8E8E8 10px,
+            #f7f4f4 10px,
+            #f7f4f4 20px
+    )
 }
